# WikiEvalOps

./: .gitignore  README.md  pyproject.toml
.tmp/pytest-of-86155/pytest-0/test_duplicate_case_ids_are_re0/: cases.jsonl
.tmp/pytest-of-86155/pytest-0/test_end_to_end_artifact_conta0/: artifact.json
.tmp/pytest-of-86155/pytest-0/test_missing_trace_is_recorded0/: artifact.json
.tmp/pytest-of-86155/pytest-0/test_reference_trace_is_record0/: artifact.json  reference-v2.jsonl
.tmp/pytest-of-86155/pytest-0/test_run_cli_returns_two_when_0/: artifact.json
artifacts/challenges/: round6-challenge.jsonl  round6-report.json
artifacts/comparisons/: round4-v1-v2.json  round5-v1-v2.json  round6-challenge-v1-v2.json  v1-v2.json
artifacts/evolution/: round11-evolution-report.json
artifacts/traces/: round3-reference-v1.jsonl  round3-reference-v2.jsonl  round4-reference-v1.jsonl  round4-reference-v2.jsonl  round5-reference-v1.jsonl  round5-reference-v2.jsonl  round6-challenge-reference-v1.jsonl  round6-challenge-reference-v2.jsonl
benchmarks/smoke/: cases.jsonl  manifest.json
configs/: evaluation.json
docs/: eval-evolution.md
examples/traces/: reference-v1.jsonl
src/wikievalops/: __init__.py  adapters.py  attribution.py  cli.py  config.py  contracts.py  errors.py  evolution.py  harness.py  io.py  metrics.py  mutation.py  reference_pipeline.py  regression.py  reporting.py
tests/: conftest.py  test_attribution.py  test_cli.py  test_config.py  test_evolution.py  test_harness.py  test_io.py  test_metrics.py  test_reference_pipeline.py  test_regression.py
(+84 files in other folders)
