[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wikievalops"
version = "0.1.0"
description = "面向企业知识智能系统的全链路评测框架。"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.7,<3"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
wikieval = "wikievalops.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
